bpy.context.object.collision.thickness_inner has no effect. #41840

Closed
opened 2014-09-15 16:30:34 +02:00 by Richard Colburn · 6 comments

System Information
Bug is present on multiple computers with different operating systems and graphics cards.

Blender Version
Bug is present in multiple builds including 2.71 and multiple daily builds up to c670ceb

Short description of error
the "inner face thickness" setting for detecting cloth collisions (bpy.context.object.collision.thickness_inner) has no effect.
The collision margin is therefore determined exclusively by the outer face thickness setting. Here is how it's supposed to work: http://wiki.blender.org/index.php/Doc:2.6/Manual/Physics/Collision

Exact steps for others to reproduce the error
Set up any cloth with a collision object. With any point of the cloth on the side of a face in the collision object opposite the direction of the normal, the cloth moves away from the face rather than moving the direction of the normal when within the "inner face thickness" margin. It doesn't matter if the cloth starts inside the "inner face thickness" margin or moves into the margin.
for the attached file, start the cloth simulation and observe the different "inner face thickness" margins on the collision objects.
inner_face_thickness_not_working.blend

**System Information** Bug is present on multiple computers with different operating systems and graphics cards. **Blender Version** Bug is present in multiple builds including 2.71 and multiple daily builds up to c670ceb **Short description of error** the "inner face thickness" setting for detecting cloth collisions (bpy.context.object.collision.thickness_inner) has no effect. The collision margin is therefore determined exclusively by the outer face thickness setting. Here is how it's supposed to work: http://wiki.blender.org/index.php/Doc:2.6/Manual/Physics/Collision **Exact steps for others to reproduce the error** Set up any cloth with a collision object. With any point of the cloth on the side of a face in the collision object opposite the direction of the normal, the cloth moves away from the face rather than moving the direction of the normal when within the "inner face thickness" margin. It doesn't matter if the cloth starts inside the "inner face thickness" margin or moves into the margin. for the attached file, start the cloth simulation and observe the different "inner face thickness" margins on the collision objects. [inner_face_thickness_not_working.blend](https://archive.blender.org/developer/F110556/inner_face_thickness_not_working.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @RichardColburn

Added subscriber: @RichardColburn
Bastien Montagne self-assigned this 2014-09-16 16:47:35 +02:00

Not a bug in fact, Cloth only uses 'outer' parameter (on both sides of faces). Fixed the doc and will commit a tip change so that users know about it.

Not a bug in fact, Cloth only uses 'outer' parameter (on both sides of faces). Fixed the doc and will commit a tip change so that users know about it.

This issue was referenced by c793042577

This issue was referenced by c793042577a036f7668afc5bf31f42e4ad97dad1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c793042577.

Closed by commit c793042577.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41840
No description provided.