Fix T41840: bpy.context.object.collision.thickness_inner has no effect on cloth.

Only change the tip to stress that, in fact, cloth sim does not use inner thickness at all,
only outer one, through the Collision modifier, afaik.